// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalysisCollapsible matches the snapshot by default 1`] = `
<div
  className="sc-bZQynM iUmxxL"
>
  <button
    aria-expanded={false}
    className="sc-gzVnrw iwtGJg sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-iwsKbI iENOxB sc-gZMcBi eILSAm"
      focusable="false"
      role="img"
    />
    <span
      className="sc-htoDjs grDYmx"
    >
      Problems (4)
    </span>
  </button>
</div>
`;

exports[`AnalysisCollapsible matches the snapshot by default 2`] = `
<div
  className="sc-bZQynM iUmxxL"
>
  <button
    aria-expanded={true}
    className="sc-gzVnrw iwtGJg sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-gqjmRU dRmBjb sc-VigVT hHVnzr"
      focusable="false"
      role="img"
    />
    <span
      className="sc-htoDjs grDYmx"
    >
      Problems (4)
    </span>
  </button>
  <ul
    className="sc-dnqmqq kQoULo"
    role="list"
  >
    <li>
       First item 
    </li>
    <li>
       Second item 
    </li>
    <li>
       Third item 
    </li>
    <li>
       Fourth item 
    </li>
  </ul>
</div>
`;

exports[`AnalysisCollapsible matches the snapshot when it is open 1`] = `
<div
  className="sc-bZQynM iUmxxL"
>
  <button
    aria-expanded={true}
    className="sc-gzVnrw iwtGJg sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-cSHVUG jEEyiP sc-kAzzGY gDMXWb"
      focusable="false"
      role="img"
    />
    <span
      className="sc-htoDjs grDYmx"
    >
      Problems (4)
    </span>
  </button>
  <ul
    className="sc-dnqmqq kQoULo"
    role="list"
  >
    <li>
       First item 
    </li>
    <li>
       Second item 
    </li>
    <li>
       Third item 
    </li>
    <li>
       Fourth item 
    </li>
  </ul>
</div>
`;

exports[`AnalysisCollapsible matches the snapshot when it is open 2`] = `
<div
  className="sc-bZQynM iUmxxL"
>
  <button
    aria-expanded={false}
    className="sc-gzVnrw iwtGJg sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-chPdSV hbfLss sc-kgoBCf ePqMlV"
      focusable="false"
      role="img"
    />
    <span
      className="sc-htoDjs grDYmx"
    >
      Problems (4)
    </span>
  </button>
</div>
`;

exports[`AnalysisCollapsible matches the snapshot with a heading 1`] = `
<div
  className="sc-bZQynM iUmxxL"
>
  <h2
    className="sc-jTzLTM ckyVTS"
  >
    <button
      aria-expanded={false}
      className="sc-gzVnrw iwtGJg sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-fjdhpX fadKJT sc-jzJRlG bTTrWz"
        focusable="false"
        role="img"
      />
      <span
        className="sc-htoDjs grDYmx"
      >
        Problems (4)
      </span>
    </button>
  </h2>
</div>
`;
